--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM hysds/isce2
+FROM hysds/isce2:latest-es1
 MAINTAINER jlinick "Justin.P.Linick@jpl.nasa.gov"
 LABEL description="GRFN PGE container for COD product generation"
 
